modified:   .gitignore 	new file:   README.md 	modified:   public/404.html 	new file:   public/ecom/about.html 	new file:   public/ecom/beverages.html 	new file:   public/ecom/faq.html 	new file:   public/ecom/gourmet.html 	new file:   public/ecom/groceries.html 	new file:   public/ecom/household.html 	renamed:    public/images/1.png -> public/ecom/images/1.png 	renamed:    public/images/10.png -> public/ecom/images/10.png 	renamed:    public/images/13.png -> public/ecom/images/13.png 	renamed:    public/images/14.png -> public/ecom/images/14.png 	renamed:    public/images/15.png -> public/ecom/images/15.png 	renamed:    public/images/16.png -> public/ecom/images/16.png 	renamed:    public/images/17.png -> public/ecom/images/17.png 	renamed:    public/images/2.png -> public/ecom/images/2.png 	renamed:    public/images/3.png -> public/ecom/images/3.png 	renamed:    public/images/4.png -> public/ecom/images/4.png 	renamed:    public/images/5.png -> public/ecom/images/5.png 	renamed:    public/images/6.png -> public/ecom/images/6.png 	renamed:    public/images/7.png -> public/ecom/images/7.png 	renamed:    public/images/8.png -> public/ecom/images/8.png 	renamed:    public/images/9.png -> public/ecom/images/9.png renamed:    public/images/arrow.png -> public/ecom/images/arrow.png 	renamed:    public/images/bv1.png -> public/ecom/images/bv1.png 	renamed:    public/images/bv2.png -> public/ecom/images/bv2.png 	renamed:    public/images/bv3.png -> public/ecom/images/bv3.png 	renamed:    public/images/bv4.png -> public/ecom/images/bv4.png 	renamed:    public/images/card.png -> public/ecom/images/card.png 	new file:   public/ecom/images/midfin.png 	modified:   public/ecom/index1.html 	new file:   public/ecom/packagedfoods.html 	new file:   public/ecom/personalcare.html 	new file:   public/ecom/products.html 	new file:   public/ecom/short-codes.html 	new file:   public/images/Google Digital Marketing & E-commerce.png 	new file:   public/images/calc.png 	new file:   public/im

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-/.firebase
+# Ignore Firebase files
+/firebase
+/firebase.json
+
+# Ignore IDE and editor settings
 /.idx
 /.vscode
+
+# Ignore local database files
 /a.sql
-/firebase.json
-/index.html
+
+# Ignore project build and dependency files
 /package-lock.json
 /package.json
+
+# Ignore main HTML (internal)
+/index.html
+
